--- a/app/views/versions/show.html.erb
+++ b/app/views/versions/show.html.erb
@@ -23,7 +23,7 @@
     <h4 class="text-info" id="textInfo"></h4>
   </div>
   <div class="hero-unit">
-    <h1 class="text-center text-warning"><span id="reasonInfo"></span> <span class="text-info" id="warningInfo">/span></h1>
+    <h1 class="text-center text-warning"><span id="reasonInfo"></span> <span class="text-info" id="warningInfo"></span></h1>
   </div>
 </div>
 <!-- END VERSION DATA -->
