--- a/app/views/versions/_shapefile.html.erb
+++ b/app/views/versions/_shapefile.html.erb
@@ -34,105 +34,110 @@
       <!-- END EXTRACTION -->
 
       <!-- ACTION: PROCESSING -->
-        <div class="step-content">
+      <div class="step-content">
 
-          <div class="row-fluid">
-            <div class="btn-group">
-              <button class="btn btn-inverse clear" data-name="mappingTbl<%= shapefile.id %>">Clear Mapping</button>
-              <button class="btn btn-success save" data-toggle="modal" href="#mappingModal<%= shapefile.id %>" data-reminder="mappingTbl<%= shapefile.id %>" data-appender="#reminderMapping<%= shapefile.id %>">Save mapping template</button>
-              <button class="btn btn-primary transform" data-name="">Transform mapped data</button>
-            </div>
-            <div class="span4"><button id="transformBtn" class="btn btn-primary action">Transform Data</button></div>
+        <div class="row-fluid">
+          <div class="btn-group">
+            <button class="btn btn-inverse clear" data-name="mappingTbl<%= shapefile.id %>">
+              Clear Mapping
+            </button>
+            <button class="btn btn-success save" data-toggle="modal" href="#mappingModal<%= shapefile.id %>" data-reminder="mappingTbl<%= shapefile.id %>" data-appender="#reminderMapping<%= shapefile.id %>">
+              Save mapping template
+            </button>
+            <button class="btn btn-primary transform" data-name="#transform_form_<%= shapefile.id %>" id="transform_btn_<%= shapefile.id %>">
+              Transform mapped data
+            </button>
           </div>
-          <br>
-          <div class="accordion" id="saved_mappings">
-            <% mappings_of(rendering(shapefile.identifier)).each do |mapping| %>
-              <div class="accordion-group">
-                <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse" href="#<%= mapping.id %>">
-                    <%= mapping.name %>
-                  </a>
-                </div>
-                <div id="<%= mapping.id %>" class="accordion-body collapse in">
-                  <div class="accordion-inner">
-                    <%= mapping.data %>
-                  </div>
+        </div>
+        <br>
+        <div class="accordion" id="saved_mappings">
+          <% mappings_of(rendering(shapefile.identifier)).each do |mapping| %>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" href="#<%= mapping.id %>">
+                  <%= mapping.name %>
+                </a>
+              </div>
+              <div id="<%= mapping.id %>" class="accordion-body collapse in">
+                <div class="accordion-inner">
+                  <%= mapping.data %>
                 </div>
               </div>
-            <% end %>
-          </div>
-          <!-- Store ISNPIRE and Shapefile Schemas in hidden input -->
-          <input id="inspire<%= shapefile.id %>" value="<%= schema(shapefile.identifier) %>" class="hide"/>
-          <input id="shape<%= shapefile.id %>" value="<%= shapefile.note %>" class="hide">
-
-          <div class="span5">
-            <table id="shapeTbl<%= shapefile.id %>" class="table table-striped table-condensed table-bordered" style="width: 100%;">
-              <thead>
-                <tr><th>Column</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </div>
-          <div class="span6">
-            <table id="mappingTbl<%= shapefile.id %>" class="table table-striped table-condensed table-bordered" style="width: 100%;">
-              <thead>
-                <tr><th>Attribute</th><th>Mapped</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </div>
-        </div>
-      <!-- END PROCESSING -->
-
-      <!-- ACTION: ARCHIVING SCHEMA -->
-        <div class="step-content">
-
-          <!-- Deactivation FORM -->
-          <%= form_tag(deactivate_version_path, :remote => true, :method => :put, "onsubmit" => "return $(this).validate()") do %>
-            <div class="input-prepend input-append">
-              <span class="add-on">Archive Location</span>
-              <%= text_field_tag 'location', nil, {:class => "input-xlarge cplocation"} %>
-              <%= hidden_field_tag 'schema', 'cp' %>
-              <%= hidden_field_tag 'shapeid', shapefile.id %>
-              <%= link_to("Check", folder_exists_version_path(:location => ""), :id => "checkFolderLink",:class => "btn btn-info", :remote => true) %>
             </div>
-            <div class="input-append">
-              <label class="checkbox">
-                <%= check_box_tag 'compress', true, false %>
-                Compress data
-              </label>
-              <label class="checkbox">
-                <%= check_box_tag 'default_path', true, false, :class => 'cp_default_path' %>
-                Default Folder
-              </label>
-              <%= submit_tag "Deactivate", :id => "deactivateVersionBtn" ,:class => "btn btn-info" %>
-            </div>
-
           <% end %>
-          <!-- /END Deactivation FORM -->
-
-          <!-- Information on archive data -->
-          <div class="step-content">
-            <table class="table table-condensed table-striped">
-              <tr>
-                <td>Features</td>
-                <td><%= shapefile.features %></td>
-              </tr>
-              <tr>
-                <td>Archive</td>
-                <td><%= link_to 'Download', download_archive_version_path(:path => shapefile.archive_path) %></td>
-              </tr>
-              <tr>
-                <td>User</td>
-                <td><%= shapefile.version.user.email %></td>
-              </tr>
-            </table>
-          </div>
-          <!-- END information on archive data -->
-          <div style="clear:both;"></div>
         </div>
+        <!-- Store ISNPIRE and Shapefile Schemas in hidden input -->
+        <input id="inspire<%= shapefile.id %>" value="<%= schema(shapefile.identifier) %>" class="hide"/>
+        <input id="shape<%= shapefile.id %>" value="<%= shapefile.note %>" class="hide">
+
+        <div class="span5">
+          <table id="shapeTbl<%= shapefile.id %>" class="table table-striped table-condensed table-bordered" style="width: 100%;">
+            <thead>
+              <tr><th>Column</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+        <div class="span6">
+          <table id="mappingTbl<%= shapefile.id %>" class="table table-striped table-condensed table-bordered" style="width: 100%;">
+            <thead>
+              <tr><th>Attribute</th><th>Mapped</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+      </div>
+    <!-- END PROCESSING -->
+
+    <!-- ACTION: ARCHIVING SCHEMA -->
+      <div class="step-content">
+        <!-- Deactivation FORM -->
+        <%= form_tag(deactivate_version_path, :remote => true, :method => :put, "onsubmit" => "return $(this).validate()") do %>
+          <div class="input-prepend input-append">
+            <span class="add-on">Archive Location</span>
+            <%= text_field_tag "location#{shapefile.id}", nil, {:class => "input-xlarge cplocation"} %>
+            <%= hidden_field_tag 'schema', rendering(shapefile.identifier) %>
+            <%= hidden_field_tag 'shapeid', shapefile.id %>
+            <%= link_to("Check", folder_exists_version_path(:location => ""), :id => "checkFolder#{shapefile.id}",:class => "btn btn-info", :remote => true) %>
+          </div>
+          <div class="input-append">
+            <label class="checkbox">
+              <%= check_box_tag 'compress', true, false %>
+              Compress data
+            </label>
+            <label class="checkbox">
+              <%= check_box_tag 'default_path', true, false, :class => "default_path_#{shapefile.id}" %>
+              Default Folder
+            </label>
+            <%= submit_tag "Deactivate", :id => "deactivateVersionBtn" ,:class => "btn btn-info" %>
+          </div>
+        <% end %>
+        <!-- /END Deactivation FORM -->
+      </div>
+    <!-- END ACTION: ARCHIVING SCHEMA -->
+
+    <!-- INFORMATION ON ARCHIVE DATA -->
+      <div class="step-content">
+        <table class="table table-condensed table-striped">
+          <tr>
+            <td>Features</td>
+            <td><%= shapefile.features %></td>
+          </tr>
+          <tr>
+            <td>Archive</td>
+            <td><%= link_to 'Download', download_archive_version_path(:path => shapefile.archive_path) %></td>
+          </tr>
+          <tr>
+            <td>User</td>
+            <td><%= shapefile.version.user.email %></td>
+          </tr>
+        </table>
+        <!-- END information on archive data -->
+        <div style="clear:both;"></div>
+      </div>
+
       <!-- END ARCHIVING SCHEMA -->
 
     </div>
@@ -142,15 +147,19 @@
 <!-- End Action steps -->
 
 <!-- HIDDEN DIVS AND FORMS -->
-  <!-- ARCHIVE Information DIV -->
-  <div id="checkResultDiv" class="hidden">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong><span id="deactivateErrors"></span></strong>
+  <!-- CHECK if Folder exists: Result dialog -->
+  <div id="checkResultDiv" class="modal hide fade">
+    <div class="content hero-unit">
+      <h1>
+        <p id="deactivateErrors" class="text-info">
+        </p>
+      </h1>
+    </div>
   </div>
-  <!-- END ARCHIVE Information DIV -->
+  <!-- END Dialog -->
 
   <!-- SHAPEFILE TRANSFORMATION FORM -->
-  <%= form_tag transform_version_path, {:id => 'transform_data_form', :remote => true} do %>
+  <%= form_tag transform_version_path, {:id => "transform_form_#{shapefile.id}", :remote => true} do %>
     <div id="errors">
     </div>
     <%= hidden_field_tag :map_list, "" %>
@@ -203,15 +212,41 @@
   $(function(){
     loadActionSteps("actionSteps<%= shapefile.id %>");
 
-    modelSchema($("#inspire<%= shapefile.id %>").val(), "mappingTbl<%= shapefile.id %>");
-    shapeSchema($("#shape<%= shapefile.id %>").val(), "shapeTbl<%= shapefile.id %>");
+    // Load Mapping data only if shapefile in Extracted condition
+    if("<%= shapefile.condition %>" == "Extracted"){
+      modelSchema($("#inspire<%= shapefile.id %>").val(), "mappingTbl<%= shapefile.id %>");
+      shapeSchema($("#shape<%= shapefile.id %>").val(), "shapeTbl<%= shapefile.id %>");
 
-    setDraggable("shapeTbl<%= shapefile.id %>", "actionSteps<%= shapefile.id %>");
-    setDroppable("mappingTbl<%= shapefile.id %>");
+      setDraggable("shapeTbl<%= shapefile.id %>", "actionSteps<%= shapefile.id %>");
+      setDroppable("mappingTbl<%= shapefile.id %>");
 
-    $("#cp_save_mapping_form").submit(function(){
-      $("#cp_save_mapping_form #data").val(mappingToJson("cpTable"));
-    });
+      $(".accordion-toggle").click(function(){
+        var dataId = $(this).attr("href");
+        var data = $(dataId+" > div").html();
+        load_mapping_table(data, "mappingTbl<%= shapefile.id %>");
+      });
+
+      $("#transform_btn_<%= shapefile.id %>").click(function(){
+        var form_name = $(this).attr("data-name");
+        $(form_name + " #map_list").val(schemaTableJSON("mappingTbl<%= shapefile.id %>"));
+        $(form_name).submit();
+      });
+    }
+    if("<%= shapefile.condition %>" == "Processed"){
+
+      $(".default_path_<%= shapefile.id %>").change(function(){
+        if( this.checked ){
+          $("#location<%= shapefile.id %>").attr("disabled", "disabled");
+        }else{
+          $("#location<%= shapefile.id %>").removeAttr("disabled");
+        }
+      });
+
+      $("#checkFolder<%= shapefile.id %>").click(function(){
+        var hrefValue = $(this).attr("href").split("=")[0];
+        $(this).attr("href", hrefValue + "=" + $("#location<%= shapefile.id %>").val());
+      });
+    }
 
   });
 </script>
