--- a/app/views/versions/deactivate.js.erb
+++ b/app/views/versions/deactivate.js.erb
@@ -1,7 +1,2 @@
-<% if @exists %>
-  $("#checkResultDiv").attr("class", "alert");
-  $("#deactivateErrors").html(" Given Folder Exists<br/>");
-<% else %>
-  $("#checkResultDiv").attr("class", "alert");
-  $("#deactivateErrors").html(" Given folder does not exists");
-<% end %>
+$("#deactivateErrors").html("Deactivating ....");
+$("#checkResultDiv").modal('show');
